--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
             </div>
             <div class="col-lg-3 col-12">
                 <div class="category card border-success p-3 sticky-top">
-                    <h3 style="text-align: center; margin-top: 1rem
-                    ">Categories</h3>
-                    <div class="catBtn">
+                    <!-- <h3 style="text-align: center; margin-top: 1rem
+                    ">Categories</h3> -->
+                    <!-- <div class="catBtn">
                         <button class="btn btn-flat waves-effect btn-outline-info col-12 mt-3 mb-3">
                             <div class="allCats">
                                 <h4>All Categories</h4>
                             </div>
                         </button>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
