--- a/dashboard/comments.html
+++ b/dashboard/comments.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Quicksand" rel="stylesheet">
+
     <style>
         .update,
         #id,
@@ -33,6 +35,20 @@
         .sortUserId,
         .sortBody {
             cursor: s-resize;
+        }
+
+        * {
+            font-family: 'Quicksand', sans-serif;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-weight: 1000
         }
     </style>
     <title>Comment Page</title>
