codes cleaned from extra notes

--- a/dashboard/categories.html
+++ b/dashboard/categories.html
@@ -55,9 +55,8 @@
 <body>
 
     <div class="container-fluid">
-
+        <!--Navbar-->
         <div>
-            <!--Navbar-->
             <nav class="row navbar navbar-expand-lg navbar-dark bg-dark">
 
 
@@ -98,13 +97,15 @@
                 <!-- Collapsible content -->
 
             </nav>
-            <!--/.Navbar-->
 
         </div>
+
+        <!-- Add category button -->
         <div class="row">
             <button id="addPostBtn" class="btn btn-flat waves-effect btn-outline-success mt-4 hideShowBtn">Add Category</button>
         </div>
 
+        <!-- Add category form -->
         <div class="row addUser theHiddenTable ">
             <input type="number" id="id" placeholder="id" class="input-group mb-3">
 
@@ -123,14 +124,7 @@
             </div>
         </div>
 
-
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-
-
+        <!-- here is the display table -->
         <div class="row table-responsive col-12 ml-0">
             <table class="table table-bordered table-hover">
                 <thead class="thead-dark">
