--- a/dashboard/comments.html
+++ b/dashboard/comments.html
@@ -58,8 +58,8 @@
 
     <div class="container-fluid">
 
+        <!--Navbar-->
         <div class="nav--BAR">
-            <!--Navbar-->
             <nav class="row navbar navbar-expand-lg navbar-dark bg-dark">
 
 
@@ -100,13 +100,14 @@
                 <!-- Collapsible content -->
 
             </nav>
-            <!--/.Navbar-->
-
         </div>
+
+        <!-- add comment button -->
         <div class="row">
             <button id="addPostBtn" class="btn btn-flat waves-effect btn-outline-success mt-4 hideShowBtn">Add Comment</button>
         </div>
 
+        <!-- add comment form -->
         <div class="row addUser theHiddenTable ">
             <input type="number" id="id" placeholder="id" class="input-group mb-3">
             <div class="input-group m-3 col-10 col-sm-8 col-lg-4">
@@ -134,14 +135,7 @@
             </div>
         </div>
 
-
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-
-
+        <!-- here is the display table -->
         <div class="row table-responsive col-12 m-0">
             <table class="table table-bordered table-hover">
                 <thead class="thead-dark">
