--- a/dashboard/posts.html
+++ b/dashboard/posts.html
@@ -55,22 +55,14 @@
 <body>
 
     <div class="container-fluid">
-
+        <!--Navbar-->
         <div>
-            <!--Navbar-->
             <nav class="row navbar navbar-expand-lg navbar-dark bg-dark">
-
-
-                <!-- Collapse button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <!-- Collapsible content -->
                 <div class="collapse navbar-collapse" id="basicExampleNav">
-
-                    <!-- Links -->
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item ">
                             <a class="nav-link" href="../index.html">Home
@@ -89,22 +81,17 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./categories.html">Category</a>
                         </li>
-
                     </ul>
-                    <!-- Links -->
-
-
                 </div>
-                <!-- Collapsible content -->
-
             </nav>
-            <!--/.Navbar-->
 
         </div>
+
+        <!-- add post button -->
         <div class="row">
             <button id="addPostBtn" class="btn btn-flat waves-effect btn-outline-success mt-4 hideShowBtn">Add Post</button>
         </div>
-
+        <!-- add post form -->
         <div class="row addUser theHiddenTable ">
             <input type="number" id="id" placeholder="id" class="input-group mb-3">
             <div class="row">
@@ -141,14 +128,7 @@
 
         </div>
 
-
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-
-
+        <!-- here is the display table -->
         <div class="row table-responsive col-12">
             <table class="table table-bordered table-hover">
                 <thead class="thead-dark">
