--- a/dashboard/users.html
+++ b/dashboard/users.html
@@ -54,38 +54,14 @@
 
     <div class="container-fluid">
 
-        <!-- <ul class="nav nav-tabs justify-content-center col-md-12 ">
-            <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./posts.html">Posts</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="./users.html">Users</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./comments.html">Comments</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./categories.html">Category</a>
-            </li>
-        </ul> -->
+        <!--Navbar-->
         <div>
-            <!--Navbar-->
             <nav class="row navbar navbar-expand-lg navbar-dark bg-dark">
-
-
-                <!-- Collapse button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <!-- Collapsible content -->
                 <div class="collapse navbar-collapse" id="basicExampleNav">
-
-                    <!-- Links -->
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item ">
                             <a class="nav-link" href="../index.html">Home
@@ -104,22 +80,17 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./categories.html">Category</a>
                         </li>
-
                     </ul>
-                    <!-- Links -->
-
-
                 </div>
-                <!-- Collapsible content -->
-
             </nav>
-            <!--/.Navbar-->
-
         </div>
+
+        <!-- add user button -->
         <div class="row">
             <button id="addUserBtn" class="btn btn-flat waves-effect btn-outline-success mt-4 hideShowBtn">Add User</button>
         </div>
 
+        <!-- add user for -->
         <div class="row addUser theHiddenTable ">
             <input type="number" id="id" placeholder="id" class="input-group mb-3">
             <div class="row">
@@ -147,14 +118,7 @@
                 <button id="updateBtn" class="btn btn-flat waves-effect btn-outline-success  update">Update</button> -->
         </div>
 
-
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-        <!-- here is the display table --------------------------------------------->
-
-
+        <!-- here is the display table -->
         <div class="row table-responsive col-12">
             <table class="table table-bordered table-hover">
                 <thead class="thead-dark">
