--- a/index.html
+++ b/index.html
@@ -29,21 +29,14 @@
 
 <body>
     <div class="container-fluid">
+        <!--Navbar-->
         <div class="">
-            <!--Navbar-->
             <nav class="row navbar navbar-expand-lg navbar-dark bg-dark">
-
-
-                <!-- Collapse button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <!-- Collapsible content -->
                 <div class="collapse navbar-collapse" id="basicExampleNav">
-
-                    <!-- Links -->
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item ">
                             <a class="nav-link active" href="./index.html">Home
@@ -62,23 +55,16 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./dashboard/categories.html">Category</a>
                         </li>
-
                     </ul>
-                    <!-- Links -->
-
-
                 </div>
-                <!-- Collapsible content -->
-
             </nav>
-            <!--/.Navbar-->
-
         </div>
-
+        <!-- add post buttpn -->
         <div>
             <button id="addPostBtn" class="btn btn-flat waves-effect btn-outline-success mt-4 hideShowBtn">Add Post</button>
         </div>
 
+        <!-- add post form -->
         <div class=" addUser theHiddenTable ">
             <input type="number" id="id" placeholder="id" class="input-group mb-3">
             <div class="row">
@@ -109,27 +95,18 @@
                 <div class="btns col-6">
                     <button id="submitBtn" class="btn btn-flat waves-effect btn-outline-success ml-0">Submit</button>
                     <button id="updateBtn" class="btn btn-flat waves-effect btn-outline-success ml-0 update">Update</button>
-
                 </div>
             </div>
-
         </div>
 
+        <!-- post cards part -->
         <div class="row whole m-0 flex-column-reverse flex-lg-row ">
             <div class="postsBoard col-lg-9 col-12 ">
-
             </div>
+
+            <!-- category cards part -->
             <div class="col-lg-3 col-12">
                 <div class="category card border-success p-3 sticky-top">
-                    <!-- <h3 style="text-align: center; margin-top: 1rem
-                    ">Categories</h3> -->
-                    <!-- <div class="catBtn">
-                        <button class="btn btn-flat waves-effect btn-outline-info col-12 mt-3 mb-3">
-                            <div class="allCats">
-                                <h4>All Categories</h4>
-                            </div>
-                        </button>
-                    </div> -->
 
                 </div>
             </div>
